# TeamMinigolf

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: CI-Pipeline.yml  CI.yml
app/: requirements.txt
app/config/: settings.py  urls.py
app/core/: admin.py  apps.py  best_player.py  context_processors.py  forms.py  leaderboard_metrics.py  middleware.py  models.py  urls.py  views.py
app/core/management/commands/: seed.py
app/core/migrations/: 0001_initial.py
app/core/templates/core/: ai_import.html  base.html  course_confirm_delete.html  course_detail.html  course_form.html  course_list.html  course_pars.html  dashboard.html  leaderboard.html  login.html  player_form.html  player_list.html  router.html  scoring.html  session_create.html  session_detail.html  session_list.html  signup.html  stats.html
app/core/templates/core/desktop/: ai_import.html  base.html  course_form.html  dashboard.html  leaderboard.html  login.html  player_form.html  player_list.html  scoring.html  session_create.html  signup.html  stats.html
app/core/templates/core/mobile/: base_mobile.html
app/core/templates/core/mobile/components/: _badge.html  _header.html  _safe_area_wrapper.html  _tab_bar.html
app/core/templates/core/mobile/pages/: about.html  ai_import.html  contact.html  index.html  leaderboard.html  play.html  (+8 more)
app/core/tests/: test_models.py  test_views.py
app/static/css/: base-mobile.css  style.css
docker/web/: Dockerfile  entrypoint.sh
docs/: ARCHITECTURE.md
scripts/: backup.sh  crontab.example  restore.sh  seed_data.py
